--- a/rpi3_robocar_dialog.html
+++ b/rpi3_robocar_dialog.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang=\"en\">
 <head><meta name=\"viewport\" content=\"width=device-width, initial-scale=1, user-scalable=no\"/>
-<title>Dialog</title>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
+<title>Dialogflow Web Demo</title>
 </head>
 <body>
 
 <div align="center">
 <iframe
     id="dialog"
-	allow="microphone;"
+    allow="microphone;"
     width="350"
     height="430"
     src="https://console.dialogflow.com/api-client/demo/embedded/76b7d121-0141-4aeb-950b-7d0019c64151">	
@@ -20,7 +19,7 @@
     var dialogFrame = document.getElementById("dialog");
     var dialogDocument = dialogFrame.contentWindow.document;
     var dialogResponse = dialogDocument.getElementById("server-response");
-	document.writeln(dialogResponse);
+    document.writeln(dialogResponse);
 
     window.RTCPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection;//compatibility for Firefox and chrome
     var pc = new RTCPeerConnection({iceServers:[]}), noop = function(){};      
@@ -33,7 +32,7 @@
             var localIP = /([0-9]{1,3}(\.[0-9]{1,3}){3}|[a-f0-9]{1,4}(:[a-f0-9]{1,4}){7})/.exec(ice.candidate.candidate)[1];
             pc.onicecandidate = noop;
         }
-		alert(localIP);
+	alert(localIP);
     };
 </script>
 </body>
